--- a/references/Ref.bib
+++ b/references/Ref.bib
@@ -70,7 +70,7 @@
   ranking      = {rank4},
 }
 
-@InProceedings{yang2018denseaspp,
+@InProceedings{Yang2018,
   author    = {Yang, Maoke and Yu, Kun and Zhang, Chi and Li, Zhiwei and Yang, Kuiyuan},
   booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
   title     = {Denseaspp for semantic segmentation in street scenes},
@@ -92,9 +92,9 @@
   pages    = {35--43},
   volume   = {47},
   file     = {:改进的多特征融合人行道检测算法_胡强.pdf:PDF},
-  keywords = {prio1, rank3},
+  keywords = {prio1, rank4},
   priority = {prio1},
-  ranking  = {rank3},
+  ranking  = {rank4},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
